--- a/src/App.css
+++ b/src/App.css
@@ -79,12 +79,35 @@
   width: 90%!important;
 }
 
+.card:hover {
+  transform: scale(1.05);
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.card{
+  transition: all 0.5s ease-in-out;
+}
+
 
 .book-cover{
   /* width: 155px; */
   /* max-width: 155px; */
   height: 250px;
+
 }
+
+p.card-description{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  font-style: italic;
+  
+}
+
 
 
 
