--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@
   border: none;
 }
 
+.user-icon{
+  background-image: url('/public/images/usuario.png');
+  width: 32px;
+  height: 32px;
+}
+
 .search-box{
   min-height: 300px;
   position: absolute;
@@ -108,6 +114,48 @@ p.card-description{
   
 }
 
+
+
+
+
+
+
+
+
+
+
+
+.loader {
+  width: 100%;
+  height: 4.8px;
+  display: inline-block;
+  position: relative;
+  background: rgba(255, 255, 255, 0.15);
+  overflow: hidden;
+}
+.loader::after {
+  content: '';
+  width: 192px;
+  height: 4.8px;
+  background: #0b95ff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: animloader 2s linear infinite;
+}
+
+@keyframes animloader {
+  0% {
+    left: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    left: 100%;
+    transform: translateX(0%);
+  }
+}
+    
 
 
 
